--- a/frontend/package.json
+++ b/frontend/package.json
@@ -169,5 +169,5 @@
     "react-error-overlay": "6.0.9"
   },
   "packageManager": "yarn@3.2.3",
-  "theme": "volto-trece"
+  "theme": "volto-light-theme"
 }
