--- a/frontend/src/addons/volto-trece/package.json
+++ b/frontend/src/addons/volto-trece/package.json
@@ -48,11 +48,13 @@
   "addons": [
     "@eeacms/volto-accordion-block",
     "@kitconcept/volto-slider-block",
+    "@kitconcept/volto-light-theme",
     "@eeacms/volto-matomo"
   ],
   "dependencies": {
     "@eeacms/volto-accordion-block": "*",
     "@eeacms/volto-matomo": "*",
+    "@kitconcept/volto-light-theme": "*",
     "@kitconcept/volto-slider-block": "*"
   }
 }
