--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -17,6 +17,21 @@ defaults:
     working-directory: ./frontend
 
 jobs:
+  meta:
+    runs-on: ubuntu-latest
+    outputs:
+      ENVIRONMENT: ${{ steps.vars.outputs.ENVIRONMENT }}
+      STACK_NAME: ${{ steps.vars.outputs.STACK_NAME }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set Env Vars
+        id: vars
+        run: |
+          ENVIRONMENT=${{ vars.LIVE_ENV }}
+          echo "ENVIRONMENT=${ENVIRONMENT}" >> $GITHUB_OUTPUT
+          echo "STACK_NAME=${ENVIRONMENT//./-}" >> $GITHUB_OUTPUT
 
   code-analysis:
     runs-on: ubuntu-latest
@@ -69,7 +84,6 @@ jobs:
           echo '| i18n | ${{ steps.i18n.conclusion == 'failure' && '❌' || ' ✅' }} |' >> $GITHUB_STEP_SUMMARY
           echo '| Unit Tests | ${{ steps.unit.conclusion == 'failure' && '❌' || ' ✅' }} |' >> $GITHUB_STEP_SUMMARY 
 
-
   release:
     runs-on: ubuntu-latest
     needs:
@@ -120,3 +134,30 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: $${{ steps.meta.outputs.labels }}
+
+  deploy:
+    if: ${{ github.ref == 'refs/heads/main' }}
+    needs:
+      - meta
+      - release
+    runs-on: ubuntu-latest
+    environment: ${{ needs.meta.outputs.ENVIRONMENT }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Deploy to cluster
+        uses: kitconcept/docker-stack-deploy@v1.2.0
+        with:
+          registry: "ghcr.io"
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          remote_host: ${{ secrets.DEPLOY_HOST }}
+          remote_port: ${{ secrets.DEPLOY_PORT }}
+          remote_user: ${{ secrets.DEPLOY_USER }}
+          remote_private_key: ${{ secrets.DEPLOY_SSH }}
+          stack_file: devops/stacks/${{ needs.meta.outputs.ENVIRONMENT }}.yml
+          stack_name: ${{ needs.meta.outputs.STACK_NAME }}
+          stack_param: ${{ github.ref_name }}
+          env_file: ${{ secrets.ENV_FILE }}
+          deploy_timeout: 480
